class LengthUnits {
  LengthUnits._();

  static const meter = 'm';
  static const centimeter = 'cm';
  static const millimeter = 'mm';
  static const micrometer = '\u03bcm';
}
